pass environment setting to personalized setting  while cluster is up
Signed-off-by: Mingshi Liu <mingshl@amazon.com>

# Conflicts:
#	src/main/java/org/opensearch/search/relevance/SearchRelevancePlugin.java
#	src/main/java/org/opensearch/search/relevance/transformer/personalizeintelligentranking/client/PersonalizeClientSettings.java